<resources>
    <string name="app_name">Timetic</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_register">Regisztráció</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="welcome">"Üdvözüljük!"</string>
    <string name="invalid_name">A teljesen nevét adja meg</string>
    <string name="invalid_email">Érvénytelen e-mail cím</string>
    <string name="invalid_password">A jelszónak legalább 5 karakter hosszúnak kell lennie</string>
    <string name="login_failed">"A bejelentkezés nem sikerült"</string>
    <string name="registration_failed">"A regisztráció nem sikerült"</string>
    <string name="user_not_found">"Nincs ilyen felhasználónk"</string>
    <string name="tSignIn">Bejelentkezés</string>
    <string name="tRegistration">Regisztráció</string>
    <string name="tOrganizationSignIn">Alkalmazottaknak</string>
    <string name="tDaily">Napi</string>
    <string name="tWeekly">Heti</string>
    <string name="tMonthly">Havi</string>

    <string name="invalid_code_reset">Érvénytelen kód</string>
    <string name="invalid_code_reset_empty">Érvénytelen kód, 6 szám karakter</string>
    <string name="invalid_password2_reset">Nem egyeznek a jelszavak</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Timetic</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Beállítások</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">Registration</string>
    <string name="menuCalendar">Naptár</string>
    <string name="menuStatistic">Kimutatások</string>
    <string name="menuClientOperations">Kontaktok</string>
    <string name="menuOrganizationOperations">Szervezetek kezelése</string>
    <string name="menuLogout">Kijelentkezés</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="tTerminSettings">Időpont beállítások</string>

    <string name="menuSettings">Beállítások</string>
    <string name="tdefaultCalendarType">Alapértelmezett naptár nézet</string>
    <string name="tPrice">Ár</string>

    <string name="tOn">On</string>
    <string name="tOff">Off</string>
    <string name="tDefaultTimeRange">Alapértelmezett időponthossz (perc)</string>

    <string name="eAtBeginning">Kezdéskor</string>
    <string name="eHalfHour">Fél óra</string>
    <string name="eOneHour">1 óra</string>
    <string name="eOffNotification">Kikapcsolás</string>
    <string name="vAtBeginning">at_beginning</string>
    <string name="vHalfHour">half_hour</string>
    <string name="vOneHour">one_hour</string>
    <string name="vOffNotification">off</string>

    <string name="tDefaultActivity">Alapértelmezett activity</string>
    <string name="tDefaultLocation">Alapértelmezett helyszín</string>

    <!-- Statistic Fragment -->
    <string name="tSelectDateRange">Időtartam választás</string>

    <string name="tLogoutQuestion">Biztosan ki szeretne jelentkezni?</string>
    <string name="tYes">Igen</string>
    <string name="tNo">Nem</string>

    <string name="title_activity_new_appointment">Új időpont létrehozása</string>
    <string name="title_activity_new_appointment_Detail">Időpont</string>
    <string name="tCancel">Mégsem</string>
    <string name="tSave">Mentés</string>
    <string name="tPrivate">Magán időpont:</string>
    <string name="tActivity">Tevékenység:</string>
    <string name="tDate">Időpont:</string>
    <string name="tClient">Ügyfél:</string>
    <string name="tPlace">Helyszín:</string>
    <string name="tPrice_">Ár:</string>
    <string name="tFT">Ft</string>
    <string name="tVideoChat">Videochat:</string>
    <string name="tNotification">Emlékeztető:</string>
    <string name="tNote">Jegyzet:</string>
    <string name="tModify">Módosítás</string>
    <string name="tCancelAppointment">Lemondás</string>

    <string name="tChooseTimeRange">Időtartam kiválasztása</string>
    <string name="tName">Név</string>
    <string name="tEmail">E-mail</string>
    <string name="tPhone">Telefonszám</string>
    <string name="tPasswordForgotten"><u>Elfelejtett jelszó</u></string>
    <string name="tJoinJitsy">Csatlakozás az online időponthoz</string>
    <string name="bSend">Küldés</string>
    <string name="tNewPassword">Új jelszó</string>
    <string name="tNewPasswordAgain">Új jelszó ismét</string>
    <string name="tCode">Kód</string>
    <string name="tResetMsg">Egy E-mail-ben elküldtük a kódot</string>
    <string name="tSearch">Keresés</string>

    <string name="btActivateOrganization">Szervezethez való regisztráció aktiválása</string>

    <string name="errorCreateAppointment">A művelet nem sikerült</string>
    <string name="enter_name_of_your_organization">Adja meg a szolgáltatója nevét</string>
    <string name="network_needed_long">Nincs internet kapcsolat, a továbbiakhoz kapcsolja be.</string>
    <string name="share_data_with_organization">Adataim megosztása a szervezettel</string>
    <string name="no_internetconnection_just_local_client">Nincs internet kapcsolat, csak azokat az ügyfeleket láthatja, akiknek időpontjaik vannak a naptárban.</string>
    <string name="network_needed">Internetkapcsolat szükséges.</string>
    <string name="private_appointments">Személyes időpontok</string>
    <string name="online_appointments">Online időpontok</string>
    <string name="income">Keresett jövedelem:</string>
    <string name="worked_hours">Ledolgozott órák:</string>
    <string name="Activities">Tevékenységek:</string>

    <string name="activated_organization">Ön már korábban regisztrált a szervezethez, mostantól már a naptárban is láthatja időpontjait.</string>
    <string name="network_needed_new_appointment">Internetkapcsolat szükséges új időpont létrehozásához</string>
    <string name="network_needed_join_meeting">Internetkapcsolat szükséges a konzultációhoz való csatlakozáshoz</string>
    <string name="network_needed_cancel_appointment">Internetkapcsolat szükséges az időpont lemondásához</string>
    <string name="network_needed_modify_appointment">Internetkapcsolat szükséges az időpont lemondásához</string>
    <string name="appointment_needed">Időpontot kötelező megadni</string>
    <string name="appointments_error">A kezdő időpont nem lehet hamarabb, mint az időpont vége.</string>
    <string name="appointment_befare_tommorow_error">Holnapnál korábbi időpont megadása nem lehetséges</string>
    <string name="price_error">Árat kötelező megadni</string>
    <string name="fill_all_fields_error">Kérem töltse ki az összes mezőt</string>
    <string name="add_email_adress">Adja meg az e-mail címét</string>
    <string name="network_needed_password_reset">Internetkapcsolat szükséges a jelszó visszaállításához</string>
    <string name="network_needed_log_in">Internetkapcsolat szükséges a bejelentkezéshez</string>
    <string name="last_sync">Utoljára szinkronizálva: "</string>
    <string name="something_went_wrong">Valami hiba történt.</string>

    <string name="registration">Regisztrálás</string>
    <string name="registrate_new_client">Új ügyfél felvétele</string>
    <string name="private_appointment">Magán időpont:</string>
    <string name="email_text">Choose an Email client :</string>

    <string name="just_number">Csak számot adhat meg.</string>

</resources>
