<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="hu.bme.aut.android.timetic.ui.calendar.CalendarMainFragment"
        android:label="@string/menuCalendar"
        tools:layout="@layout/fragment_calendar_main">

    </fragment>

    <fragment
        android:id="@+id/nav_statistic"
        android:name="hu.bme.aut.android.timetic.ui.statistic.StatisticDiagramFragment"
        android:label="@string/menuStatistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/nav_client_operation"
        android:name="hu.bme.aut.android.timetic.ui.clientoperations.ClientOperationsFragment"
        android:label="@string/menuClientOperations"
        tools:layout="@layout/fragment_client_operations" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="hu.bme.aut.android.timetic.ui.loginAregistration.logout.LogoutFragment"
        android:label="@string/menuLogout"
        tools:layout="@layout/fragment_logout" />

</navigation>