<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailAppointment"
    android:background="@color/colorLight"
    tools:context=".ui.calendar.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".create.NewAppointmentActivity"
            android:columnCount="2"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tPrivate"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <Switch
                android:id="@+id/dPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:checked="false"
                android:textOff="@string/tOff"
                android:textOn="@string/tOn"
                android:layout_column="1"
                android:showText="true"
                android:layout_marginTop="15dp"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                />


            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tActivity"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/dActivity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightgrey"
                android:padding="2dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tDate"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:id="@+id/dChooseStartTime">


            </Button>
            <Button
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:id="@+id/dChooseEndTime">

            </Button>




            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tClient"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/dClient"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightgrey"
                android:padding="2dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tPlace"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/dLocation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightgrey"
                android:padding="2dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tPrice_"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dPrice"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/lightgrey"
                    android:padding="2dp"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tFT"
                    android:padding="4dp"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tVideoChat"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <Switch
                android:id="@+id/dVideochat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="56dp"
                android:checked="false"
                android:textOff="@string/tOff"
                android:textOn="@string/tOn"
                android:layout_column="1"
                android:showText="true"
                android:layout_marginTop="15dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tNotification"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <!--TODO numberpicker-->
            <Spinner
                android:id="@+id/dNotification"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightgrey"
                android:padding="2dp"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tNote"
                android:padding="4dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/dNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightgrey"
                android:padding="2dp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:minLines="4"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/dCancelAppointment"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tCancelAppointment"/>

            <Button
                android:id="@+id/dModify"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tModify"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>