<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginAregistration.logout.LogoutFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tLogoutQuestion"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/logoutYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tYes"
            android:background="@color/colorPrimaryLight"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/logoutNo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tNo"
            android:background="@color/colorPrimaryLight"/>

    </LinearLayout>

</LinearLayout>