<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/linearlayout_border"
        android:layout_margin="10dp"
        android:padding="4dp">

        <Button
            android:id="@+id/btDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:background="@color/colorPrimaryLight"
            android:text="@string/tDaily"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/tWeekly"
            android:textSize="12sp"
            android:background="@color/colorPrimaryLight"/>

        <Button
            android:id="@+id/btMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:text="@string/tMonthly"
            android:textSize="12sp"
            android:background="@color/colorPrimaryLight"/>

    </LinearLayout>


    <FrameLayout
    android:id="@+id/frag_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        >
    </FrameLayout>


</LinearLayout>
